Fix JDK11 deprecations
Explicit integral constructors have been deprecated, as was
Class.newInstance(). Adjust to that.

Change-Id: Ia78e6a0347c2b0264afc722f00acc716899e661f
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>